--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
     <script>
-        window.location.replace('/');
+        const originalPath = window.location.pathname;
+        window.location.replace(originalPath);
     </script>
 </head>
 
