Hopefully this fixes the routing issue

--- a/public/404.html
+++ b/public/404.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>404 - Page Not Found</title>
     <script>
         const originalPath = window.location.pathname;
-        window.location.replace(originalPath);
-    </script>
+        window.location.replace('/?redirectTo=' + encodeURIComponent(originalPath));    </script>
 </head>
 
 <body>
-    <h1>Page Not Found</h1>
+    <h1>404 - Page Not Found</h1>
+    <p>Redirecting...</p>
 </body>
 
 </html>
